--- a/sobre.html
+++ b/sobre.html
@@ -16,7 +16,7 @@
     <!-- bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
-    <title>Quentin Tarantino</title>
+    <title>Tela Quentin | Sobre</title>
 </head>
 <body>
     <header class="sticky-top">
