adequa tamanho de título do banner principal

--- a/filmes.html
+++ b/filmes.html
@@ -169,7 +169,7 @@
         <section class="home-banner">
             <div id="movie-info" class="container d-flex flex-column">
                 <img src="./img/filmes.png" class="filmes" alt="imagem com título do filme">
-                <span class="descricao-filme1 text-uppercase mt-5">diretor. roteirista. produtor</span>
+                <!-- <span class="descricao-filme1 text-uppercase mt-5">diretor. roteirista. produtor</span> -->
 
                 <!-- botão para página de biografia -->
                 <div class="botoes">
