alteracoes de responsividade

--- a/filmes.html
+++ b/filmes.html
@@ -16,7 +16,7 @@
     <!-- bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/filmes.css">
 
     <title>Quentin Tarantino</title>
@@ -62,7 +62,7 @@
     </nav>
 </header>
 
-<main class="bg-dark">
+<main>
 <!-- 2 janelas MODAL: login e cadastro. Obs: as duas janelas MODAL foram colocadas no main porque estavam carregando com bug quando colocadas no header-->
     <!-- janela MODAL login -->
     <div class="modal" tabindex="-1" role="dialog" id="modalLogin">
@@ -164,7 +164,7 @@
 <!-- fim das janelas modais de login e cadastro -->
 
 <!-- inicío da section biografia -->
-    <section class="home-banner  filmes-quentin">
+    <section class="home-banner filmes-quentin">
         <div id="movie-info" class="p-5 d-flex justify-content-center">
             <img src="./img/filmes.png" class="filmes" alt="imagem com título do filme">            
         </div>
@@ -174,7 +174,7 @@
     <!-- album de miniaturas de filmes -->
 
     <div class="album py-5 bg-light">
-        <div class="container">
+        <div class="container album-miniaturas">
         <!-- card com miniatura do filme -->
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
             
