--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link active links-header" href="filmes.html">Filmes</a>
+                                <a class="nav-link active links-header" href="#killBill">Filmes</a>
                             </li>
 
                             <li class="nav-item">
@@ -164,7 +164,7 @@
         <!-- fim da janela MODAL Cadastro -->
     <!-- fim das janelas modais de login e cadastro -->
 
-    <!-- inicío da section biografia -->
+    <!-- inicío da section banner topo -->
         <section class="home-banner">
             <div id="movie-info" class="d-flex flex-column p-5">
                 <img src="./img/quentin.png" class="quentin" alt="imagem com título do filme">
@@ -180,31 +180,31 @@
                 </div>             
             </div>
         </section>
-    <!-- fim da section biografia -->
+    <!-- fim da section banner topo -->
 
 
     <!-- inicío da section filmes -->
-    <section id="premiado" class="row">
-        <div class="killBill-banner col-lg-6 col-md-12">
+        <section id="killBill" class="row">
+            <div class="killBill-banner col-lg-6 col-md-12">
 
-        </div>
-
-        <div class="filmes-texto p-5 col-lg-6 col-md-12 d-flex flex-column justify-content-around align-items-center">
-            <img src="./img/filmes.png" class="filmes-img filmes" alt="imagem com título do filme">
-            <p class="descricao-filme1 text-uppercase">filmografia</p>
-            <p class="descricao-filme2 text-center text-light">Pra virar expert em Quentin Tarantino</p>
-
-            <div class="botoes">
-                <!-- botão que puxa a janela do trailer MODAL -->
-                <a href="filmes.html">
-                    <button role="button" class="btn botao text-uppercase px-4 py-3" >
-                        <i class="fas fa-play-circle"></i>
-                        veja filmografia                       
-                    </button>
-                </a>
             </div>
-        </div>                                       
-    </section>
+
+            <div class="filmes-texto p-5 col-lg-6 col-md-12 d-flex flex-column justify-content-around align-items-center">
+                <img src="./img/filmes.png" class="filmes-img" alt="imagem com título do filme">
+                <p class="descricao-filme1 text-uppercase">filmografia</p>
+                <p class="descricao-filme2 text-center text-light">Pra virar expert em Quentin Tarantino</p>
+
+                <div class="botoes">
+                    <!-- botão que puxa a janela do trailer MODAL -->
+                    <a href="filmes.html">
+                        <button role="button" class="btn botao text-uppercase px-4 py-3" >
+                            <i class="fas fa-play-circle"></i>
+                            veja filmografia                       
+                        </button>
+                    </a>
+                </div>
+            </div>                                       
+        </section>
 <!-- fim da section filmes -->
 
     <!-- inicío da section filme mais recente -->
