acrescenta rolagem topo pagina retira modal filmes

--- a/sobre.html
+++ b/sobre.html
@@ -65,7 +65,7 @@
         </nav>
     </header>
 
-    <main class="bg-dark">
+    <main class="bg-dark" id="topo">
     <!-- 2 janelas MODAL: login e cadastro. Obs: as duas janelas MODAL foram colocadas no main porque estavam carregando com bug quando colocadas no header-->
         <!-- janela MODAL login -->
         <div class="modal" tabindex="-1" role="dialog" id="modalLogin">
@@ -232,7 +232,7 @@
             
             <nav class="col-lg-6 col-md-12">
                 <ul>
-                    <li><a href="#" class="useful-link-item">Início da Página</a></li>
+                    <li><a href="#topo" class="useful-link-item">Início da Página</a></li>
                     <li><a href="#" class="useful-link-item">Filmes</a></li>
                     <li><a href="#" class="useful-link-item">Biografia</a></li>
                     <li><a href="#" class="useful-link-item">Sobre</a></li>
