--- a/filmes.html
+++ b/filmes.html
@@ -175,7 +175,7 @@
     <div class="album py-5 bg-light">
         <div class="container album-miniaturas">
         <!-- card com miniatura do filme -->
-          <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-4">
+          <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 g-5">
             
             <!--Filme 1 - My Best Friend's Birthday-->
             <div class="col">
