--- a/filmes.html
+++ b/filmes.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/filmes.css">
 
-    <title>Quentin Tarantino</title>
+    <title>Quentin Tarantino | Filmes</title>
 </head>
 <body>
   <header class="sticky-top container-fluid">
